--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
         <main>
             <header>
         <div class="logo" style="position: relative;">
-            <a href="Home.html">
+            <a href="index.html">
                 <h2>What's up?</h2>
             </a>
         </div>
@@ -23,7 +23,7 @@
         <div class="menu-toggle" id="mobile-menu">&#9776;</div>
 
         <nav class="nav-links">
-            <a href="Home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Blog.html">Blog</a>
             <a href="contact.html">Contact</a>
@@ -33,7 +33,7 @@
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
-        <a href="Home.html" class="boxed-link">Home</a>
+        <a href="index.html" class="boxed-link">Home</a>
         <a href="About.html" class="boxed-link">About</a>
         <a href="Blog.html" class="boxed-link">Blog</a>
         <a href="contact.html" class="boxed-link">Contact</a>
