--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
 </head>
 <body>
 
-  <a href="Home.html" class="exit-button">← back</a>
+  <a href="index.html" class="exit-button">← back</a>
 
   <form class="contact-form" action="https://formspree.io/f/xwpwqqej" method="POST">
   <h2>Message Us</h2>
