--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="Home.html"><h2>What's up?</h2></a>
+            <a href="index.html"><h2>What's up?</h2></a>
         </div>
 
     
@@ -21,7 +21,7 @@
 
     
         <nav class="nav-links">
-            <a href="Home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Blog.html">Blog</a>
             <a href="contact.html">Contact</a>
@@ -31,7 +31,7 @@
 
     <div id="sidebar" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" id="close-btn">&times;</a>
-        <a href="Home.html" class="boxed-link">Home</a>
+        <a href="index.html" class="boxed-link">Home</a>
         <a href="About.html" class="boxed-link">About</a>
         <a href="Blog.html" class="boxed-link">Blog</a>
         <a href="contact.html" class="boxed-link">Contact</a>
