--- a/Sky.html
+++ b/Sky.html
@@ -101,7 +101,7 @@
                     <h2>The Night Sky</h2>
                     <p>The night sky is mysterious and vast, with darkness stretching above. Stars may dot the view, sometimes 
                         joined by the moon. Even without them, the night sky has its own calm beauty, wrapping the world in stillness 
-                        and rest./p>
+                        and rest.</p>
                 </div>
             </div>
         </div>
